# auth-microservice

./: README.md  init.sql  pyproject.toml
server/: api.py  endpoints.py  ports.py  schemas.py  settings.py
server/adapters/: accounts.py  schemas.py  setup.py  users.py
tests/: conftest.py  test_adapters.py  test_endpoints.py
