[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["mr-raccoon-97 <eric.m.cardozo@mi.unc.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
redis = "^5.1.0"
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
pytest-asyncio = "^0.24.0"
asyncpg = "^0.29.0"
httpx = "^0.27.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
